@@ -23,6 +23,7 @@ Version history:
 - "getattributes" or "getmethods" output lists are now alphabethically sorted
 - flext::StopThread function to terminate running threads (started with LaunchThread)
 - added flext::post() and flext::error() console printing (thread-safe)
+- added flext::CmpAtom and AtomList::operator < methods ... useful for using lists as keys for STL
 
 0.4.4:
 - fixed deadly bug for Max/MSP method-to-symbol-binding proxies
